# arma_watcher

./: .gitignore  CLAUDE.md  LICENSE  README.md  dev.ps1  install.ps1  launch_gui.vbs  main.py  pyproject.toml  run.bat  run.ps1  update.bat  update.ps1
.claude/: settings.local.json
.github/workflows/: build-installer.yml
arma_watcher/: __main__.py  cli.py  config.py  gui.py  inference.py  screenshot.py  updater.py  watcher.py
docs/: cancel.html  index.html  success.html
installer/: README.md  arma_watcher.iss  bootstrap.ps1
launchers/: dev.ps1  install.ps1  install.sh  launch_gui.vbs  run.ps1  run.sh  update.ps1
src/: inference.py
tests/: conftest.py  do_serverless_probe.py  test_config.py  test_gui_billing.py  test_gui_legal.py  test_gui_model.py  test_inference.py  test_screenshot.py  test_watcher.py
