[project]
name = "arma-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mss>=10.2.0",
    "ollama>=0.6.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
]

[project.scripts]
arma-watcher = "arma_watcher.cli:main"
arma-watcher-gui = "arma_watcher.gui:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "arma_watcher"]
