[project]
name = "arma-watcher"
version = "0.1.1"
description = "Watches your Arma Reforger screen with a local vision model and sends Discord notifications about your server queue position and ETA."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "mss>=10.2.0",
    "ollama>=0.6.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
]

[project.scripts]
arma-watcher = "arma_watcher.cli:main"
arma-watcher-gui = "arma_watcher.gui:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "arma_watcher"]
